welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: ')' expected but ';' found.
		if (estFaceMur) { (gauche(); avance()) || (droite(); avance()) }	
                                           ^SnakeBuggle:7: error: ';' expected but ')' found.
		if (estFaceMur) { (gauche(); avance()) || (droite(); avance()) }	
                                                     ^SnakeBuggle:7: error: ';' expected but ')' found.
		if (estFaceMur) { (gauche(); avance()) || (droite(); avance()) }	
                                                                             ^