welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
	for (x <- 0 to 6 ) {
		
	}
		if (estFaceMur) { (gauche(); avance()) || (droite(); avance()) }	
}
